# cardpr

./: .flaskenv  .gitignore  Dockerfile  README.md  alembic.ini  cardpr.py  config.py  docker-compose.yml  example.env  pyproject.toml  requirements.txt  setup.cfg
app/: __init__.py  config.py  crm.py  errors.py  hooks.py  main.py  models.py  routes.py  schemas.py  services.py
app/db/: core.py
app/db/migrations/: env.py
app/db/migrations/versions/: e309c7c6693d_initital.py
app/services/: balance.py  customer.py
deployment/nginx/: cardpr
deployment/supervisor/: cardpr.conf
migrations/versions/: feb58c045a89_initial.py
