[tool.poetry]
name = "wallet-cards-api"
version = "0.1.0"
description = "Wallet Cards API"
authors = ["Aleksandr Shirapov"]
readme = "README.md"
packages = [{include = "wallet_cards_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true
