[tool.poetry]
name = "cardpr"
version = "0.1.0"
description = "CardPR API"
authors = ["Aleksandr Shirapov"]
readme = "README.md"
packages = [{include = "cardpr"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true
